show winner list without Metamask connection

--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,4 @@
 TEST_PK=your_private_key_here
 
 # ZetaChain Athens Testnet RPC URL (optional, you can customize)
-RPC_URL=https://zetachain-athens.blockpi.network/lcd/v1/public
+RPC_URL=your_rpc_url_here
