--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "set-rewards": "node scripts/set_rewards.js",
-    "set-rewards-advanced": "node scripts/set_rewards_advanced.js"
+    "change-admin": "node scripts/change_admin.js"
   },
   "eslintConfig": {
     "extends": [
